# MobitParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/MobitParser/: nodes.h  tokens.h
src/: exceptions.cpp  nodes.cpp  tokens.cpp
